# Back-End/routers/usuarios.js
@@ -1,14 +1,18 @@
 const router = require("express").Router();
 const usuariosController = require("../controllers/usuarios.controller");
+const checkAuthMiddleware = require("../middleware/check-auth");
 
-router.get("/", usuariosController.index);
 
-router.get("/:id", usuariosController.show);
+router.get("/", checkAuthMiddleware.checkAuth, usuariosController.index);
 
-router.post("/", usuariosController.save);
+router.get("/:id", checkAuthMiddleware.checkAuth, usuariosController.show);
 
-router.put("/:id", usuariosController.update);
+router.post("/sign-up", usuariosController.singUp);
 
-router.delete("/:id", usuariosController.destroy);
+router.post("/login", usuariosController.login);
+
+router.put("/:id", checkAuthMiddleware.checkAuth, usuariosController.update);
+
+router.delete("/:id", checkAuthMiddleware.checkAuth, usuariosController.destroy);
 
 module.exports = router;
